@@ -1,6 +1,15 @@
 Revision history for Perl extension Carp::Assert::More.
 
 
+NEXT
+        [ENHANCEMENTS]
+        assert_context_scalar() now provides a default message of
+        "function_name must be called in scalar context".
+
+        assert_context_nonvoid() now provide a default message of
+        "function_name must not be called in void context".
+
+
 2.3.0   Tue May 30 21:52:20 CDT 2023
         [ENHANCEMENTS]
         Added assert_arrayref_of() to verify that all of the elements
